--- a/src/app/api/api/api.component.html
+++ b/src/app/api/api/api.component.html
@@ -1,5 +1,6 @@
 <div class="container mx-auto flex justify-center items-center h-screen" style="display: flex; flex-direction: column;">
     <div>
         <img [src]="DogImageUrl" alt="Imagen de Gatito" class="cat-image" width="450" height="450">
+        <button (click)="refreshImage()">cambiar de gato</button>
     </div>
 </div>
